--- a/userPanel.html
+++ b/userPanel.html
@@ -10,16 +10,20 @@
 </head>
 <body>
 <div class="container-main">
-<header class="userPanelHeader">Hi username! Welcome to your private Shelter</header>
+<header class="dogCvHeader">
+
+
+</header>
     <div class="aside">
     <div class="aside-content"> galeria psów</div>
     <div class="aside-content"> Zarezerwowane psy</div>
     <div class="aside-content"> pogoda</div>
+    <div class="aside-content"> kalkulator</div>
     <div> filtry</div>
 
     </div>
     <div class="userPanelMainContent">
-        <div class="userPanelDogCards"><a href=""><img src="https://cdn-prod.medicalnewstoday.com/content/images/articles/322/322868/golden-retriever-puppy.jpg" alt=""><p>Brajan</p></a></div>
+        <div class="userPanelDogCards"><a href="dogCv.html"><img src="https://cdn-prod.medicalnewstoday.com/content/images/articles/322/322868/golden-retriever-puppy.jpg" alt=""><p>Brajan</p></a></div>
         <div class="userPanelDogCards"><a href=""><img src="https://hips.hearstapps.com/ghk.h-cdn.co/assets/16/08/gettyimages-530330473.jpg?crop=0.659xw:0.990xh;0.123xw,0.00779xh&resize=980:*" alt=""><p>Dudek</p></a></div>
         <div class="userPanelDogCards"><a href=""><img src="https://www.cdc.gov/healthypets/images/pets/cute-dog-headshot.jpg?_=42445" alt=""><p>alojzy</p></a></div>
         <div class="userPanelDogCards"><a href=""><img src="https://www.cdc.gov/healthypets/images/pets/cute-dog-headshot.jpg?_=42445" alt=""><p>marek</p></a></div>
