--- a/loginPage.html
+++ b/loginPage.html
@@ -10,27 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-<div class="container-main">
-    <div class="login-form">
-        <h1>Login</h1>
-        <div class="input-box">
-            <i class='bx bxs-user'></i>
-            <input type="text" placeholder="Nazwa Użytkownika" required>
-
-        </div>
-        <div class="input-box"> <i class='bx bxs-lock-alt' ></i>
-            <input type="password" placeholder="Hasło" required >
-
-        </div>
-        <div class="remember-forgot">
-            <label><input type="checkbox">Zapamiętaj mnie</label>
-
-        </div>
-
-        <button class="login-btn input-box"><a href="userPanel.html"> Login</a></button>
-    </div>
-
-</div>
-<script type="module" src="src/js/app.jsx"></script>
+    <div id="app" class="local"></div>
+<script type="module" src="src/js/components/login.jsx"></script>
 </body>
 </html>
