--- a/calculator.html
+++ b/calculator.html
@@ -9,16 +9,8 @@
     <link rel="stylesheet" href="./src/scss/pages/_calculator.scss" />
 </head>
 <body>
-<div class="container-main">
-    <header class="dogCvHeader">
-        <div class="localName"></div>
-    </header>
-    <div class="aside">
-        <button class="aside-content"><a href="userPanel.html">galeria psów</a></button>
-        <div class="aside-content">Zarezerwowane psy</div>
-        <div class="aside-content">pogoda</div>
-    </div>
-</div>
+
+<div id="app" class="userPanel"></div>
 <script type="module" src="src/js/components/calculator.jsx"></script>
 </body>
 </html>
