--- a/reservedDogs.html
+++ b/reservedDogs.html
@@ -8,17 +8,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="./src/scss/pages/_reservedDogs.scss" />
 </head>
+
 <body>
-<div class="container-main">
-    <header class="dogCvHeader">
-        <div class="localName"></div>
-    </header>
-    <div class="aside">
-        <button class="aside-content"><a href="userPanel.html">galeria psów</a></button>
-        <div class="aside-content">Zarezerwowane psy</div>
-        <div class="aside-content">pogoda</div>
-    </div>
-</div>
+
+<div class="userPanel"></div>
 <script type="module" src="src/js/components/reservedDogs.jsx"></script>
 </body>
 </html>
