--- a/weather.html
+++ b/weather.html
@@ -9,16 +9,8 @@
     <link rel="stylesheet" href="./src/scss/pages/_weather.scss" />
 </head>
 <body>
-<div class="container-main">
-    <header class="dogCvHeader">
-        <div class="localName"></div>
-    </header>
-    <div class="aside">
-        <button class="aside-content"><a href="userPanel.html">galeria psów</a></button>
-        <div class="aside-content">Zarezerwowane psy</div>
-        <div class="aside-content">pogoda</div>
-    </div>
-</div>
+<div class="userPanel"></div>
+
 <script type="module" src="src/js/components/weather.jsx"></script>
 </body>
 </html>
