--- a/index.html
+++ b/index.html
@@ -6,22 +6,8 @@
     <link rel="stylesheet" href="./src/scss/main.scss" />
 </head>
 <body>
-<!--main container used for left right margins-->
-<div class="container-main">
-<!--landing page-->
-    <header class="header-main">
-        <div class="header-logo"> <img class="paw-logo" src="src/icons/paw-solid.svg" alt=""><button class="btn-logo">Animal Shelter</button></div>
-        <div class="header-hrefs">
-            <button class="btn-header">Dlaczego my?</button>
-            <button class="btn-header">Pies</button>
-            <button class="btn-header">Kontakt</button>
-            <button class="btn-header btn-login"><a href="loginPage.html"> Zaloguj</a></button>
-        </div>
 
-    </header>
-    <div class="header-main-img"><img src="src/images/dogs.jpg"></div>
-    <footer class="footer-main">footer text</footer>
-</div>
+<div class="container"></div>
 <script type="module" src="src/js/app.jsx"></script>
 </body>
 </html>
