--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Animal Shelter</title>
     <link rel="stylesheet" href="./src/scss/main.scss" />
 </head>
 <body>
